feat(linker): add ability for irc to use linker (1/2)

--- a/env.example
+++ b/env.example
@@ -4,6 +4,9 @@ WIKI_AUTHOR_ROLE_ID=123456789012345678
 ALLOWED_ROLE_IDS=123456789012345678,987654321098765432
 DISCORD_PREFIX="w$"
 
+# IRC Bridge configuration
+BRIDGE_WEBHOOK_IDS=123456789012345678,123456789012345678
+
 # MediaWiki OAuth Configuration
 MW_CONSUMER_KEY=your_mediawiki_consumer_key
 MW_CONSUMER_SECRET=your_mediawiki_consumer_secret
